<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/scroll_layout"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:contentDescription="Backdrop"
            android:id="@+id/backdrop_detail"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:alpha=".5"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/poster_detail"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginTop="136dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.061"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/backdrop_detail" />
        <TextView
            android:id="@+id/date_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="12dp"
            android:textColor="@color/white"
            android:alpha="0.75"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/title_detail" />

        <ImageView
            android:id="@+id/star"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toEndOf="@+id/poster_detail"
            app:layout_constraintTop_toBottomOf="@+id/date_detail" />

        <TextView
            android:id="@+id/rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/star"
            app:layout_constraintTop_toBottomOf="@+id/date_detail" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_favourite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_fav_border"
            android:paddingHorizontal="20dp"
            android:text="Add to Favorurite"
            android:textAllCaps="false"
            android:textColor="#FFCB6B"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster_detail" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCast"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_favourite"/>
        <TextView
            android:id="@+id/detail_text"
            android:text="@string/introduction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rvCast"/>

        <TextView
            android:id="@+id/detail_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_text"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>