...
            app:layout_constraintStart_toStartOf="parent" />


    </FrameLayout>

    <com.ismaeldivita.chipnavigation.ChipNavigationBar
        android:id="@+id/chip_nav"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="100dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/round_blue_more_less_dark"
        app:cnb_menuResource="@menu/menu_chip"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout"
       />

    <FrameLayout
        android:id="@+id/frame_container"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
